--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,9 @@ body{
 a{
     text-decoration: none;
 }
+section{
+    margin-bottom: 100px;
+}
 .container{
     width: 1140px;
     margin: 0 auto;
@@ -88,6 +91,7 @@ a{
 Header Section Start
 ---------------------------------------------------------------------------
 ------------------------------------------------------------------------ */
+/* navbar section start */
 #navbar{
     padding: 30px 0;
 }
@@ -99,7 +103,22 @@ Header Section Start
     justify-content: space-between;
     align-items: center;
 }
-
+/* navbar section end */
+/* banner section start */
+#banner_sec{
+    padding: 35px 0;
+    background: url(../assets/Hero-bg.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+#banner_sec img{
+    margin-bottom: 30px;
+}
+#banner_sec .sec_ttl{
+    font-size: 48px;
+}
+/* banner section end */
 /* ------------------------------------------------------------------------
 ---------------------------------------------------------------------------
 Header Section end
