Inspiration section Create Done

--- a/css/style.css
+++ b/css/style.css
@@ -36,13 +36,13 @@ section{
     font-weight: 800;
     margin-bottom: 25px;
 }
-.sec_Sub_ttl{
+.sec_sub_ttl{
     color: #0D1321;
     font-size: 24px;
     font-weight: 800;
     margin-bottom: 25px;
 }
-.sec_Sub_ttl_2{
+.sec_sub_ttl_2{
     color: rgba(13, 19, 33, 0.7);
     font-size: 24px;
     font-weight: 700;
@@ -124,32 +124,70 @@ Header Section Start
 Header Section end
 ---------------------------------------------------------------------------
 ------------------------------------------------------------------------ */
-
-
 /* ------------------------------------------------------------------------
 ---------------------------------------------------------------------------
 Main Section Start
 ---------------------------------------------------------------------------
 ------------------------------------------------------------------------ */
+/* Developer section start */
+#developer .container{
+    border-radius: 16px;
+    background: rgba(13, 19, 33, 0.02);
+    padding: 70px 90px;
 
-
+}
+#developer .row{
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+}
+#developer .sec_text{
+    margin-bottom: 50px;
+}
+#developer .btn{
+    padding: 12px 20px 12px 20px;
+    border-radius: 0;
+    opacity: 70%;
+    font-size: 17px;
+}
+.developer_item_1, .developer_item_2, .developer_item_3{
+    margin: 30px 0;
+    padding: 50px;
+}
+.developer_item_1, .developer_item_3{
+    border-radius: 16px;
+    background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+}
+.developer_item_2 {
+    background: linear-gradient(270.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+}
+/* Developer section End */
+/* Inspiration Section Start */
+.inspiration_info{
+    border:1px solid #0D132133;
+    border-radius: 16px;
+    padding: 30px;
+    margin-top: 45px;
+}
+.inspiration_info iframe{
+    border-radius: 16px;
+}
+/* Inspiration Section End */
 /* ------------------------------------------------------------------------
 ---------------------------------------------------------------------------
 Main Section End
 ---------------------------------------------------------------------------
------------------------------------------------------------------------- */
-
-
+-------------------------------------------------------------------------*/
 /* ------------------------------------------------------------------------
 ---------------------------------------------------------------------------
 Footer Section Start
 ---------------------------------------------------------------------------
------------------------------------------------------------------------- */
+-------------------------------------------------------------------------*/
 
 
 /* ------------------------------------------------------------------------
 ---------------------------------------------------------------------------
 Footer Section End
 ---------------------------------------------------------------------------
------------------------------------------------------------------------- */
+-------------------------------------------------------------------------*/
 
