--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ section{
     padding: 17px 24px;
     background: none;
     transition: all linear 0.3s;
+    cursor: pointer;
 }
 .btn:hover{
     color:#fff;
@@ -106,7 +107,7 @@ Header Section Start
 /* navbar section end */
 /* banner section start */
 #banner_sec{
-    padding: 35px 0;
+    padding: 90px 0 ;
     background: url(../assets/Hero-bg.png);
     background-position: center;
     background-size: cover;
